--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
       padding-bottom: 32px;
   }
   .sub-heading {
-      color: #fff;
-      font-weight: 800;
-      font-size: 24px;
-      margin-bottom: 16px;
-      border-bottom: 1px solid var(--slate-700);
-      padding-bottom: 8px;
+    color: #fff;
+    font-weight: 800;
+    font-size: 24px;
+    margin-bottom: 16px;
+    border-bottom: 1px solid var(--slate-700);
+    padding-bottom: 8px;
   }
   .article-card {
       background: var(--slate-800);
@@ -84,6 +84,10 @@
     <div class="container row">
       <h1>microDOS<span class="grad">(2)</span></h1>
       <nav class="nav-links">
+        <!-- New buttons added as requested -->
+        <a href="https://microdos2.github.io/UPDATE2/" class="btn">Home</a>
+        <a href="https://microdos2.github.io/usersstories/" class="btn">User Experiences</a>
+        <!-- Existing buttons -->
         <a href="#articles" class="btn">Articles</a>
         <a href="#studies" class="btn">Studies</a>
       </nav>
@@ -145,55 +149,62 @@
     <!-- Scientific Studies Section -->
     <section class="section" id="studies" style="padding-top:0">
         <div class="container">
-            <h3 class="sub-heading">Scientific Studies & Reviews</h3>
-            <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
-                <a href="https://www.nature.com/articles/s41598-021-01811-4" class="hyperlinked-item">
-                    <div class="article-card">
-                        <h4>Adults who microdose psychedelics report health related motivations... (Scientific Reports, 2021)</h4>
-                        <p>A large cross-sectional study (n≈4,000) showing that microdosers report lower anxiety and depression and often aim to improve wellness—though the design limits claims of causation.</p>
-                    </div>
-                </a>
-                <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7011995/" class="hyperlinked-item">
-                    <div class="article-card">
-                        <h4>The therapeutic potential of microdosing psychedelics in... (PMC, 2020)</h4>
-                        <p>Overview of short-term benefits—like improved mood and social connection—and standard microdosing ranges such as 10–20 µg LSD or 0.3–0.5 g psilocybin mushrooms.</p>
-                    </div>
-                </a>
-                <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC6617883/" class="hyperlinked-item">
-                    <div class="article-card">
-                        <h4>Psychedelic microdosing benefits and challenges: an empirical codebook (Harm Reduction Journal, 2019)</h4>
-                        <p>A systematic gathering of community-reported pros (e.g., improved mood, focus) and cons (e.g., anxiety, physical discomfort) among 278 microdosers.</p>
-                    </div>
-                </a>
-                <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0211023" class="hyperlinked-item">
-                    <div class="article-card">
-                        <h4>A systematic study of microdosing psychedelics (PLOS One, 2019)</h4>
-                        <p>A six-week observational study found boosts in psychological functioning on dosing days, with modest drops in depression and stress—but also noted strong expectancy bias among users.</p>
-                    </div>
-                </a>
-                <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC11027847/" class="hyperlinked-item">
-                    <div class="article-card">
-                        <h4>Is microdosing a placebo? A rapid review of low-dose LSD (PMC, 2024)</h4>
-                        <p>Suggests microdosing can affect neurobiology, mood, and subjective experience—but also raises concerns about placebo effects.</p>
-                    </div>
-                </a>
-                <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7925122/" class="hyperlinked-item">
-                    <div class="article-card">
-                        <h4>Self-blinding citizen science to explore psychedelic microdosing (eLife, 2021)</h4>
-                        <p>An open-source, self-blinding study design that highlights how expectations may drive reported benefits, offering a possible blueprint for future placebo-controlled citizen studies.</p>
-                    </div>
-                </a>
-                <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC11027848/" class="hyperlinked-item">
-                    <div class="article-card">
-                        <h4>Can microdosing psychedelics make one feel more authentic? (PMC, 2023)</h4>
-                        <p>A small longitudinal study in the Netherlands (n=18) tracking “state authenticity”—participants reported feeling more true to themselves and more engaged in satisfying activities on microdosing days.</p>
-                    </div>
-                </a>
-            </div>
+          <h3 class="sub-heading">Scientific Studies & Reviews</h3>
+          <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
+            <a href="https://www.nature.com/articles/s41598-021-01811-4" class="hyperlinked-item">
+                <div class="article-card">
+                    <h4>Adults who microdose psychedelics report health related motivations... (Scientific Reports, 2021)</h4>
+                    <p>A large cross-sectional study (n≈4,000) showing that microdosers report lower anxiety and depression and often aim to improve wellness—though the design limits claims of causation.</p>
+                </div>
+            </a>
+            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7011995/" class="hyperlinked-item">
+                <div class="article-card">
+                    <h4>The therapeutic potential of microdosing psychedelics in... (PMC, 2020)</h4>
+                    <p>Overview of short-term benefits—like improved mood and social connection—and standard microdosing ranges such as 10–20 µg LSD or 0.3–0.5 g psilocybin mushrooms.</p>
+                </div>
+            </a>
+            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC6617883/" class="hyperlinked-item">
+                <div class="article-card">
+                    <h4>Psychedelic microdosing benefits and challenges: an empirical codebook (Harm Reduction Journal, 2019)</h4>
+                    <p>A systematic gathering of community-reported pros (e.g., improved mood, focus) and cons (e.g., anxiety, physical discomfort) among 278 microdosers.</p>
+                </div>
+            </a>
+            <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0211023" class="hyperlinked-item">
+                <div class="article-card">
+                    <h4>A systematic study of microdosing psychedelics (PLOS One, 2019)</h4>
+                    <p>A six-week observational study found boosts in psychological functioning on dosing days, with modest drops in depression and stress—but also noted strong expectancy bias among users.</p>
+                </div>
+            </a>
+            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC11027847/" class="hyperlinked-item">
+                <div class="article-card">
+                    <h4>Is microdosing a placebo? A rapid review of low-dose LSD (PMC, 2024)</h4>
+                    <p>Suggests microdosing can affect neurobiology, mood, and subjective experience—but also raises concerns about placebo effects.</p>
+                </div>
+            </a>
+            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7925122/" class="hyperlinked-item">
+                <div class="article-card">
+                    <h4>Self-blinding citizen science to explore psychedelic microdosing (eLife, 2021)</h4>
+                    <p>An open-source, self-blinding study design that highlights how expectations may drive reported benefits, offering a possible blueprint for future placebo-controlled citizen studies.</p>
+                </div>
+            </a>
+            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC11027848/" class="hyperlinked-item">
+                <div class="article-card">
+                    <h4>Can microdosing psychedelics make one feel more authentic? (PMC, 2023)</h4>
+                    <p>A small longitudinal study in the Netherlands (n=18) tracking “state authenticity”—participants reported feeling more true to themselves and more engaged in satisfying activities on microdosing days.</p>
+                </div>
+            </a>
+          </div>
         </div>
     </section>
   </main>
 
-  <footer class="footer">© 2025 microDOS(2) — All rights reserved.</footer>
+  <footer class="footer">
+    <div style="margin-bottom: 24px;">
+      <a href="https://microdos2.github.io/UPDATE2/#pricing" class="btn">Order Now</a>
+    </div>
+    <div>
+      © 2025 microDOS(2) — All rights reserved.
+    </div>
+  </footer>
 </body>
 </html>
