--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
                     <p>An observational six-week study of microdosers noting well-being gains paired with expectancy effects.</p>
                 </div>
             </a>
+            <a href="https://www.nature.com/articles/s41598-022-14512-3" target="_blank" class="hyperlinked-item">
+                <div class="article-card">
+                    <h4>Scientific Reports (2022) — Psilocybin microdosers demonstrate greater observed improvements…</h4>
+                    <p>A longitudinal study finding small- to medium-sized improvements in mood and mental health in microdosers relative to a control group.</p>
+                </div>
+            </a>
           </div>
         </div>
     </section>
